--- a/EDA_population/EDA_population.ipynb
+++ b/EDA_population/EDA_population.ipynb
@@ -16,7 +16,7 @@
     "sns.set()\n",
     "sns.set_theme(style=\"darkgrid\")\n",
     "\n",
-    "file_name = \"forFBpost.csv\"\n",
+    "file_name = \"data/forFBpost.csv\"\n",
     "df = pd.read_csv(file_name, sep=';', header=0)"
    ]
   },
@@ -498,7 +498,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21982/1688514214.py:2: FutureWarning: ['Город'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
+      "/tmp/ipykernel_23680/1688514214.py:2: FutureWarning: ['Город'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
       "  group_by_year.agg(['sum','mean','std'])\n"
      ]
     },
@@ -835,7 +835,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21982/1146084478.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/tmp/ipykernel_23680/1146084478.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  group_by_year.sum().plot(ax=plt.gca())\n"
      ]
     },
@@ -873,7 +873,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21982/2492282268.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/tmp/ipykernel_23680/2492282268.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  group_by_year.mean().plot(ax=plt.gca())\n"
      ]
     },
@@ -1387,7 +1387,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21982/1045388213.py:1: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
+      "/tmp/ipykernel_23680/1045388213.py:1: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
       "  popular_cities = current_pop['Город'][1:10]\n"
      ]
     },
@@ -1582,7 +1582,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f817c3fceb0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f7d9c47bb20>"
       ]
      },
      "execution_count": 20,
@@ -1612,7 +1612,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f817a965f60>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f7d9c4aef80>"
       ]
      },
      "execution_count": 21,
@@ -1718,7 +1718,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21982/3607108126.py:1: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
+      "/tmp/ipykernel_23680/3607108126.py:1: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
       "  unpopular_cities = current_pop['Город'][0:10]\n"
      ]
     },
@@ -1892,7 +1892,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f817a522a40>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f7d9c433a30>"
       ]
      },
      "execution_count": 25,
